tests/sumo/errors/routes/disconnected_walk/errors.sumo
Error: Disconnected plan for person '4' (left not connected to beg).
Quitting (on error).
